--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/netflix_favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="veIgRqgU14ZNORh0u4w5r3q4boRRNB_2y9pmwfZf6gk" />
     <title>Netflix-Clone</title>
   </head>
   <body>
